Website/css/style.css
/***************************************************************/
/*						  General Looks 					   */
/***************************************************************/

/*================== FONTS ==================*/
@font-face
{
	font-family: 'Raleway';
	src: url('../fonts/Raleway-Regular.ttf');
}

body {
	background: url(../images/background.png);
    background-repeat: no-repeat;
    background-attachment: fixed;
	font-family: 'Raleway';
	margin: 0;
}
#page {
	width: 960px;
	margin: 0 auto;
	padding: 96px 0 0;
}
img {
	border: 0;
}

/*================== IMAGES ==================*/
#header span.shadow, #footer span.shadow, #sidebar li.selected > a, #sidebar li > a:hover 
{
	background: url(../images/shadows.png) repeat-x;
}

#featured-jobs, #footer div.section, #form-setup > div {}

/*================== HOVERS ===================*/
#job-searches a.btn:hover, #performances #sidebar span.more:hover, #form-setup input.btn:hover 
{
	filter:alpha(opacity=90);
	opacity: 0.9;
}

/*========== SCROLLABLE CONTENT ===========*/
#scrollable-content 
{
  height: 70%;
  overflow: auto;
  padding-bottom: 50px;
}

/*==================== MAP ====================*/
#map
{
  height: 400px;
  width: 100%;
  margin: 0;
}

/*------------------------------ Sprites ------------------------------*/
#header span.shadow
{
	background: url(../images/shadows.png) repeat-x;
}
.btn
{
	background: url(../images/button.png) no-repeat;
}
/*================== HEADER ==================*/
#header {
	background-color: #303030;
	width: 100%;
	text-align: right;
	position: absolute;
	left: 0;
	top: 0;
}
#header > div {
	height: 96px;
	width: 940px;
	margin: 0 auto;
	padding: 0 10px;
}
#header span.shadow {
	background-position: 0 -20px;
	display: block;
	height: 8px;
	width: 100%;
	position: absolute;
	bottom: -8px;
	z-index: 999;
}
/*================== LOGO ==================*/
#logo {
	float: left;
	display: inline-block;
	margin-top: 20px;
}

/*============= NAVIGATION BAR =============*/
#navigation 
{
	display: inline-block;
	list-style: none;
	width: 480px;
	margin: 30px 0 0;
	padding: 0;
}
#navigation li 
{
	float: right;
	margin-left: 17px;
}
#navigation li a 
{
	color: #8c8c8c;
	font-family: 'Raleway';
	font-size: 15px;
	line-height: 50px;
	text-decoration: none;
}
#navigation li a:hover, #navigation li.selected a {
	color: #fff;
}

#contents > div {
	display: inline-block;
	width: 100%;
	padding-top: 42px;
}
#contents > div.body {
	width: 950px;
	padding-left: 10px;
}
#contents h2, #contents h3 {
	color: #000;
	font-family: 'Raleway';
	font-weight: normal;
	line-height: 24px;
	margin: 0 0 24px;
	text-transform: uppercase;
}
#contents p {
	color: #606060;
	font-size: 13px;
	line-height: 24px;
	margin: 0;
	padding: 0 0 24px;
}
#contents p a {
	color: #606060;
}
#contents p a:hover {
	color: #000;
}

/*============== JOBS ==============*/
#featured-jobs {
	float: left;
	height: 450px;
	width: 608px;
	margin: 0 20px 30px 0;
	padding: 0 10px 0 0;
}
#featured-jobs ul {
	display: inline-block;
	list-style: none;
	margin: 0;
	padding: 0;
}
#featured-jobs li {
	float: left;
	width: 304px;
	position: relative;
}
#featured-jobs li p {
	color: #000;
	font-family: "Raleway";
	padding-bottom: 0;
	text-transform: uppercase;
}
#featured-jobs li p span {
	color: #606060;
	display: block;
	padding-right: 20px;
}

/*============== REAL ESTATE ==============*/
#featured-real-estate {
	float: right;
	height: 500px;
	width: 450px;
	padding: 0 10px 0 0;
}
#featured-real-estate ul {
	display: inline-block;
	list-style: none;
	margin: 0;
	padding: 0;
}
#featured-real-estate li {
	float: right;
	width: 100%;
	position: relative;
}
#featured-real-estate li p {
	color: #000;
	font-family: "Raleway";
	padding-bottom: 0;
	text-transform: uppercase;
}
#featured-real-estate li p span {
	color: #606060;
	display: block;
}

#job-search ul {
	color: #606060;
	list-style: none;
	margin: 0;
	padding: 0;
}
#job-search li {
	font-size: 13px;
	line-height: 24px;
	margin-bottom: 26px;
}
#job-search li a {
	color: #606060;
	text-decoration: none;
}
#job-search li a:hover {
	text-decoration: underline;
}
#job-search li span.time {
	display: inline-block;
	float: left;
	font-family: "Raleway";
	font-size: 13px;
	line-height: 24px;
	width: 72px;
	margin-bottom: 6px;
	margin-right: 10px;
}

/*=============== ABOUT ===============*/
#about
{
	min-height: 600px;
}
#about h2 {
	text-align: center;
}
#about h4 {
	font-family: "Raleway";
	font-size: 14px;
	font-weight: normal;
	line-height:24px;
	text-transform: uppercase;
}
#about ul {
	display: inline-block;
	list-style: none;
	margin: 0 0 30px;
	padding: 0;
}
#about ul li {
	float: left;
	width: 220px;
	margin: 0 10px;
}
#about ul li p {
	padding: 0 20px 0 0;
}

#main {
	float: right;
	min-height: 1000px;
	width: 606px;
	margin: 0 0 30px;
	padding: 36px 0 0;
}

/*=============== FORMS ===============*/
#form-setup > div 
{
	background-position: right 0;
	height: 30px;
	width: 30px;
}
#form-setup form 
{
	float: left;
	width: 200px;
	padding: 0 0 0 0px;
}
#form-setup label 
{
	color: #606060;
	display: block;
	font-size: 13px;
	line-height: 24px;
}
#form-setup input.txtfield 
{
	height: 25px;
	width: 300px;
	border: 1px solid #b3b3b3;
	margin: 0 0 18px;
	padding: 0 4px;
}
#form-setup textarea {
	height: 136px;
	width: 300px;
	border: 1px solid #b3b3b3;
	margin: 0 0 18px;
	padding: 0 0 0 4px;
	overflow: auto;
	resize: none;
}
#form-setup input.btn {
	background-position: 0,0px;
	color: #fff;
	cursor: pointer;
	font-family: "Raleway";
	font-size: 13px;
	height: 31px;
	line-height: 31px;
	width: 81px;
	border: 0;
	margin: 0;
	padding: 0 0 8px;
}
#form-setup ul {
	color: #606060;
	list-style: none;
	margin: 0;
	padding: 0
}
#form-setup ul li {
	display: inline-block;
	width: 100%;
	padding: 0;
}
#form-setup li p {
	padding: 0 0 0 90px;
}
#form-setup ul li span {
	float: left;
	display: inline-block;
	font-size: 13px;
	line-height: 24px;
	width: 90px;
}

/*=============== FOOTER ===============*/
#footer {
	background-color: #303030;
	color: #606060;
	font-family: "Raleway";
	font-size: 16px;
	text-align: center;
	vertical-align: text-bottom;
	width: 100%;
	height: 50px;
	position: absolute;
	left: 0;
}

